// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> renders regular disabled active toggle correctly 1`] = `
.c1 {
  background-color: transparent;
  border: none;
  padding: 0;
  height: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: not-allowed;
}

.c1.toggle--enabled {
  cursor: pointer;
}

.c1.toggle--small {
  width: 44px;
}

.c1.toggle--large {
  width: 73px;
}

.c1:focus {
  outline: none;
}

.c3 {
  padding: 0;
  border-radius: 21px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.toggle--small .c3 {
  width: 30px;
  height: 16px;
  border: 1px solid;
}

.toggle--large .c3 {
  width: 48px;
  height: 24px;
  border: 1px solid;
}

.toggle--active .c3 {
  background-color: #1bab1e;
  border-color: #1bab1e;
}

.toggle--inactive .c3 {
  background-color: #ffffff;
  border-color: #999999;
}

.c0:focus .c3 {
  border-color: #026cdf;
  box-shadow: 0 0 5px 0 #026cdf;
}

.toggle--enabled:hover .c3 {
  border: 2px solid #026cdf;
}

.toggle--active.toggle--disabled .c3 {
  background-color: #1bab1e;
  border-color: #ebebeb;
  opacity: 0.2;
}

.toggle--inactive.toggle--disabled .c3 {
  background-color: rgba(255,255,255,0.5);
  border-color: #ebebeb;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  position: relative;
  background-color: transparent;
  border: 0;
  padding: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 {
  position: absolute;
  height: 100%;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 50%;
  box-sizing: border-box;
  position: relative;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955), left 0.3s cubic-bezier(0.175,0.885,0.32,1.275);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955), left 0.3s cubic-bezier(0.175,0.885,0.32,1.275);
}

.toggle--small .c5 {
  width: 10px;
  height: 10px;
}

.toggle--large .c5 {
  width: 18px;
  height: 18px;
}

.toggle--active .c5 {
  background-color: #ffffff;
}

.toggle--inactive .c5 {
  background-color: #999999;
  left: 3px;
}

.toggle--active.toggle--disabled .c5,
.toggle--inactive.toggle--disabled .c5 {
  opacity: 0.7;
  background-color: #bfbfbf;
}

.toggle--small.toggle--active .c5 {
  left: 17px;
}

.toggle--large.toggle--active .c5 {
  left: 27px;
}

<button
  aria-checked={true}
  className="toggle--disabled toggle--active toggle--large c0 c1"
  disabled={true}
  onClick={[Function]}
  role="switch"
  size="large"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    />
    <div
      className="c4"
    >
      <div
        className="c5"
      />
    </div>
  </div>
</button>
`;

exports[`<Toggle /> renders regular disabled inactive toggle correctly 1`] = `
.c1 {
  background-color: transparent;
  border: none;
  padding: 0;
  height: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: not-allowed;
}

.c1.toggle--enabled {
  cursor: pointer;
}

.c1.toggle--small {
  width: 44px;
}

.c1.toggle--large {
  width: 73px;
}

.c1:focus {
  outline: none;
}

.c3 {
  padding: 0;
  border-radius: 21px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.toggle--small .c3 {
  width: 30px;
  height: 16px;
  border: 1px solid;
}

.toggle--large .c3 {
  width: 48px;
  height: 24px;
  border: 1px solid;
}

.toggle--active .c3 {
  background-color: #1bab1e;
  border-color: #1bab1e;
}

.toggle--inactive .c3 {
  background-color: #ffffff;
  border-color: #999999;
}

.c0:focus .c3 {
  border-color: #026cdf;
  box-shadow: 0 0 5px 0 #026cdf;
}

.toggle--enabled:hover .c3 {
  border: 2px solid #026cdf;
}

.toggle--active.toggle--disabled .c3 {
  background-color: #1bab1e;
  border-color: #ebebeb;
  opacity: 0.2;
}

.toggle--inactive.toggle--disabled .c3 {
  background-color: rgba(255,255,255,0.5);
  border-color: #ebebeb;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  position: relative;
  background-color: transparent;
  border: 0;
  padding: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 {
  position: absolute;
  height: 100%;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 50%;
  box-sizing: border-box;
  position: relative;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955), left 0.3s cubic-bezier(0.175,0.885,0.32,1.275);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955), left 0.3s cubic-bezier(0.175,0.885,0.32,1.275);
}

.toggle--small .c5 {
  width: 10px;
  height: 10px;
}

.toggle--large .c5 {
  width: 18px;
  height: 18px;
}

.toggle--active .c5 {
  background-color: #ffffff;
}

.toggle--inactive .c5 {
  background-color: #999999;
  left: 3px;
}

.toggle--active.toggle--disabled .c5,
.toggle--inactive.toggle--disabled .c5 {
  opacity: 0.7;
  background-color: #bfbfbf;
}

.toggle--small.toggle--active .c5 {
  left: 17px;
}

.toggle--large.toggle--active .c5 {
  left: 27px;
}

<button
  aria-checked={false}
  className="toggle--disabled toggle--inactive toggle--large c0 c1"
  disabled={true}
  onClick={[Function]}
  role="switch"
  size="large"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    />
    <div
      className="c4"
    >
      <div
        className="c5"
      />
    </div>
  </div>
</button>
`;

exports[`<Toggle /> renders regular size active toggle correctly 1`] = `
.c1 {
  background-color: transparent;
  border: none;
  padding: 0;
  height: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: not-allowed;
}

.c1.toggle--enabled {
  cursor: pointer;
}

.c1.toggle--small {
  width: 44px;
}

.c1.toggle--large {
  width: 73px;
}

.c1:focus {
  outline: none;
}

.c3 {
  padding: 0;
  border-radius: 21px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.toggle--small .c3 {
  width: 30px;
  height: 16px;
  border: 1px solid;
}

.toggle--large .c3 {
  width: 48px;
  height: 24px;
  border: 1px solid;
}

.toggle--active .c3 {
  background-color: #1bab1e;
  border-color: #1bab1e;
}

.toggle--inactive .c3 {
  background-color: #ffffff;
  border-color: #999999;
}

.c0:focus .c3 {
  border-color: #026cdf;
  box-shadow: 0 0 5px 0 #026cdf;
}

.toggle--enabled:hover .c3 {
  border: 2px solid #026cdf;
}

.toggle--active.toggle--disabled .c3 {
  background-color: #1bab1e;
  border-color: #ebebeb;
  opacity: 0.2;
}

.toggle--inactive.toggle--disabled .c3 {
  background-color: rgba(255,255,255,0.5);
  border-color: #ebebeb;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  position: relative;
  background-color: transparent;
  border: 0;
  padding: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 {
  position: absolute;
  height: 100%;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 50%;
  box-sizing: border-box;
  position: relative;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955), left 0.3s cubic-bezier(0.175,0.885,0.32,1.275);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955), left 0.3s cubic-bezier(0.175,0.885,0.32,1.275);
}

.toggle--small .c5 {
  width: 10px;
  height: 10px;
}

.toggle--large .c5 {
  width: 18px;
  height: 18px;
}

.toggle--active .c5 {
  background-color: #ffffff;
}

.toggle--inactive .c5 {
  background-color: #999999;
  left: 3px;
}

.toggle--active.toggle--disabled .c5,
.toggle--inactive.toggle--disabled .c5 {
  opacity: 0.7;
  background-color: #bfbfbf;
}

.toggle--small.toggle--active .c5 {
  left: 17px;
}

.toggle--large.toggle--active .c5 {
  left: 27px;
}

<button
  aria-checked={true}
  className="toggle--enabled toggle--active toggle--large c0 c1"
  disabled={false}
  onClick={[Function]}
  role="switch"
  size="large"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    />
    <div
      className="c4"
    >
      <div
        className="c5"
      />
    </div>
  </div>
</button>
`;

exports[`<Toggle /> renders small size active toggle correctly 1`] = `
.c1 {
  background-color: transparent;
  border: none;
  padding: 0;
  height: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: not-allowed;
}

.c1.toggle--enabled {
  cursor: pointer;
}

.c1.toggle--small {
  width: 44px;
}

.c1.toggle--large {
  width: 73px;
}

.c1:focus {
  outline: none;
}

.c3 {
  padding: 0;
  border-radius: 21px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.toggle--small .c3 {
  width: 30px;
  height: 16px;
  border: 1px solid;
}

.toggle--large .c3 {
  width: 48px;
  height: 24px;
  border: 1px solid;
}

.toggle--active .c3 {
  background-color: #1bab1e;
  border-color: #1bab1e;
}

.toggle--inactive .c3 {
  background-color: #ffffff;
  border-color: #999999;
}

.c0:focus .c3 {
  border-color: #026cdf;
  box-shadow: 0 0 5px 0 #026cdf;
}

.toggle--enabled:hover .c3 {
  border: 2px solid #026cdf;
}

.toggle--active.toggle--disabled .c3 {
  background-color: #1bab1e;
  border-color: #ebebeb;
  opacity: 0.2;
}

.toggle--inactive.toggle--disabled .c3 {
  background-color: rgba(255,255,255,0.5);
  border-color: #ebebeb;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  position: relative;
  background-color: transparent;
  border: 0;
  padding: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 {
  position: absolute;
  height: 100%;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 50%;
  box-sizing: border-box;
  position: relative;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955), left 0.3s cubic-bezier(0.175,0.885,0.32,1.275);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955), left 0.3s cubic-bezier(0.175,0.885,0.32,1.275);
}

.toggle--small .c5 {
  width: 10px;
  height: 10px;
}

.toggle--large .c5 {
  width: 18px;
  height: 18px;
}

.toggle--active .c5 {
  background-color: #ffffff;
}

.toggle--inactive .c5 {
  background-color: #999999;
  left: 3px;
}

.toggle--active.toggle--disabled .c5,
.toggle--inactive.toggle--disabled .c5 {
  opacity: 0.7;
  background-color: #bfbfbf;
}

.toggle--small.toggle--active .c5 {
  left: 17px;
}

.toggle--large.toggle--active .c5 {
  left: 27px;
}

<button
  aria-checked={true}
  className="toggle--enabled toggle--active toggle--small c0 c1"
  disabled={false}
  onClick={[Function]}
  role="switch"
  size="small"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    />
    <div
      className="c4"
    >
      <div
        className="c5"
      />
    </div>
  </div>
</button>
`;
